# home-finder

./: README.md  manage.py  pyproject.toml
home_finder/: asgi.py  settings.py  urls.py  wsgi.py
home_finder/templates/: index.html
home_finder/templates/layouts/: base.html
home_finder/tests/: test_asgi.py  test_urls.py  test_wsgi.py
properties/: admin.py  models.py  urls.py  utils.py  views.py
properties/management/commands/: importamenities.py  importproperties.py  importpropertyplaces.py
properties/migrations/: 0001_initial.py  0002_amenity.py  0003_alter_amenity_options_alter_property_options_and_more.py  0004_rename_amenity_place_alter_place_options_and_more.py  0005_propertyplace.py  0006_propertyplace_property_place_unique.py  0007_alter_propertyplace_options_and_more.py  0008_alter_place_kind.py
properties/templates/properties/: place_detail.html  place_list.html  property_detail.html  property_list.html
properties/templates/properties/includes/: propertyplaces.html
properties/templatetags/: properties_extras.py
properties/tests/: conftest.py  factories.py  test_models.py
searches/: admin.py  models.py  urls.py  views.py
searches/migrations/: 0001_initial.py  0002_alter_search_options_and_more.py  0003_remove_traveltimerequirement_valid_place_or_place_kind_and_more.py  0004_result.py  0005_search_min_number_of_bedrooms.py
searches/templates/searches/: search_detail.html
users/: admin.py  forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html  register.html
users/tests/: factories.py  test_models.py
