[tool.poetry]
name = "home-finder"
version = "0.1.0"
description = "Find your home."
authors = ["Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
Django = "^4.0"
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
