[tool.poetry]
name = "home-finder"
version = "0.1.0"
description = "Find your home."
authors = ["Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
googlemaps = "^4.6"
Django = "^4.0"
psycopg2 = "^2.9"
python = "^3.10"
pyzoopla = { git = "https://github.com/thomasleese/pyzoopla.git", branch = "main" }

[tool.poetry.dev-dependencies]
black = "^22.6"
factory-boy = "^3.2"
pytest = "^7.1"
pytest-django = "^4.5"
pytest-factoryboy = "^2.5"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "home_finder.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
